docs-archive/apache-airflow-providers-amazon/9.33.0/_sources/_api/airflow/providers/amazon/aws/transfers/s3_to_sftp/index.rst.txt
airflow.providers.amazon.aws.transfers.s3_to_sftp
=================================================

.. py:module:: airflow.providers.amazon.aws.transfers.s3_to_sftp


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.s3_to_sftp.S3ToSFTPOperator


Module Contents
---------------

.. py:class:: S3ToSFTPOperator(*, s3_bucket, s3_key, sftp_path, sftp_conn_id = 'ssh_default', sftp_remote_host = '', aws_conn_id = 'aws_default', s3_filenames = None, sftp_filenames = None, confirm = True, fail_on_file_not_exist = True, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   This operator enables the transferring of files from S3 to a SFTP server.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3ToSFTPOperator`

   :param sftp_conn_id: The sftp connection id. The name or identifier for
       establishing a connection to the SFTP server.
   :param sftp_path: The sftp remote path. For a single file it must include the
       file path. For multiple files it is the destination directory path and must
       end with ``"/"``.
   :param sftp_remote_host: The remote host of the SFTP server. Overrides host in
       Connection.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is None or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param s3_bucket: The targeted s3 bucket. This is the S3 bucket from
       where the file is downloaded.
   :param s3_key: The targeted s3 key. For a single file it must include the file
       path. For multiple files it is the key prefix (directory) and must end with
       ``"/"``.
   :param s3_filenames: Only used if you want to move multiple files. You can pass
       a list with exact key suffixes present under the s3_key prefix, or a string
       prefix that all filenames must match. Use ``"*"`` to move all objects under
       the s3_key prefix.
   :param sftp_filenames: Only used if you want to move multiple files and name them
       differently at the destination. It can be a list of filenames or a string
       prefix that replaces the s3 prefix.
   :param confirm: specify if the SFTP operation should be confirmed, defaults to True.
       When True, a stat will be performed on the remote file after upload to verify
       the file size matches and confirm successful transfer.
   :param fail_on_file_not_exist: If True, operator fails when a source S3 key does not
       exist. If False, the operator logs a warning and skips the transfer. Default is True.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('s3_key', 'sftp_path', 's3_bucket', 's3_filenames', 'sftp_filenames')



   .. py:attribute:: sftp_conn_id
      :value: 'ssh_default'



   .. py:attribute:: sftp_path


   .. py:attribute:: s3_bucket


   .. py:attribute:: s3_key


   .. py:attribute:: sftp_remote_host
      :value: ''



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: s3_filenames
      :value: None



   .. py:attribute:: sftp_filenames
      :value: None



   .. py:attribute:: confirm
      :value: True



   .. py:attribute:: fail_on_file_not_exist
      :value: True



   .. py:method:: get_s3_key(s3_key)
      :staticmethod:


      Parse the correct format for S3 keys regardless of how the S3 url is passed.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



